# SimpleEngine

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
objects/: VintageTV.mtl
source/: imgui.ini  main.cpp
source/renderer/: kb_input.cpp  kb_input.h  ve_renderer.cpp  ve_renderer.h
source/shader/: compile.bat  frag.spv  frag2.spv  shader.frag  shader.vert  shader2.frag  shader2.vert  texfrag.spv  texshader.frag  texshader.vert  vert.spv
source/utilities/: kb_input.cpp  kb_input.h  shapes.h  utilities.h
source/vulkan-backend/: ve_backend.cpp  ve_backend.h  ve_validation_layer.cpp  ve_validation_layer.h
source/window/: ve_window.cpp  ve_window.h
